working_controllers/Disallow_Run_as_Root/Disallow_Run_As_Root/test-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: webhook-demo
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      runAsUser: 0
