working_controllers/Disallow_Run_as_Root/Disallow_Run_As_Root/test-pass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: http-echo
    image: hashicorp/http-echo:latest
    args: ["-text=hello from UID 1000", "-listen=:5678"]
    ports:
    - containerPort: 5678
