working_controllers/Disallow_Run_as_Root/Disallow_Run_As_Root/Disallow_Run_As_Root.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-demo
---
apiVersion: v1
kind: Service
metadata:
  name: no-root-user-enforcer
  namespace: webhook-demo
spec:
  selector:
    app: no-root-user-enforcer
  ports:
    - port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-root-user-enforcer
  namespace: webhook-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-root-user-enforcer
  template:
    metadata:
      labels:
        app: no-root-user-enforcer
    spec:
      containers:
        - name: webhook
          image: docker.io/creativsrwr/no-root-user-enforcer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: no-root-user-enforcer-tls
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: no-root-user-enforcer
  annotations:
    cert-manager.io/inject-ca-from: webhook-demo/no-root-user-enforcer-tls
webhooks:
  - name: no-root-user-enforcer.webhook-demo.svc
    clientConfig:
      service:
        name: no-root-user-enforcer
        namespace: webhook-demo
        path: /validate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE"]
        scope: "Namespaced"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
